Add hisRecord tool #log